# Windmill

./: .gitignore  CMakeLists.txt  README.md  common.h  glad.c
core/: CMakeLists.txt  application.cpp  application.h
examples/: deferred_demo.cpp  pbr_demo.cpp  shadow_demo.cpp
imgui/: CMakeLists.txt
loader/: CMakeLists.txt  assimp_instance_loader.cpp  assimp_instance_loader.h  assimp_loader.cpp  assimp_loader.h
renderer/: CMakeLists.txt  renderer.cpp  renderer.h
renderer/camera/: camera.cpp  camera.h  camera_control.cpp  camera_control.h  game_camera_control.cpp  game_camera_control.h  orthographic_camera.cpp  orthographic_camera.h  perspective_camera.cpp  perspective_camera.h  trackball_camera_control.cpp  trackball_camera_control.h
renderer/post_processing/: bloom.cpp  bloom.h
renderer/scene/: object.cpp  object.h  scene.cpp  scene.h
renderer/scene/light/: ambient_light.cpp  ambient_light.h  directional_light.cpp  directional_light.h  light.cpp  light.h  point_light.cpp  point_light.h  spot_light.cpp  spot_light.h
renderer/scene/mesh/: instanced_mesh.cpp  instanced_mesh.h  mesh.cpp  mesh.h
renderer/scene/shadow/: point_light_shadow.cpp  point_light_shadow.h  shadow.cpp  shadow.h
renderer/shaders/bloom/: extract_bright.frag  merge.frag  merge.vert  up_sample.frag
renderer/shaders/common/: light_struct.glsl  phong_light_func.glsl
renderer/shaders/deferred/: g_buffer.frag  g_buffer.vert  lighting.frag  (+1 more)
tools/: CMakeLists.txt  tools.cpp  tools.h
wrapper/: CMakeLists.txt  framebuffer.cpp  framebuffer.h  shader.cpp  shader.h  texture.cpp  texture.h
(+40 files in other folders)
